# spaces

./: Cargo.toml  README.md  mod.rs
src/: arrays.rs  card.rs  dim.rs  dimensions.rs  discrete.rs  empty.rs  interval.rs  lib.rs  macros.rs  maps.rs  n_space.rs  nd_space.rs  norms.rs  option.rs  pair.rs  partition.rs  partitions.rs  product.rs  real.rs  spaces.rs  span.rs  tuples.rs
src/continuous/: continuous.rs  infinite.rs  interval.rs  mod.rs  nonnegative_reals.rs  positive_reals.rs  reals.rs
src/core/: card.rs  dim.rs  enclosing.rs  interval.rs  mapping.rs  mod.rs  space.rs  union.rs
src/dimensions/: binary.rs  continuous.rs  discrete.rs  infinite.rs  mod.rs  natural.rs  null.rs  partitioned.rs
src/discrete/: binary.rs  discrete.rs  integers.rs  interval.rs  mod.rs  natural.rs  naturals.rs  ordinal.rs  partition.rs  partitioned.rs
src/interval_impls/: bounded.rs  mod.rs  partial.rs  partitions.rs  unbounded.rs
src/kernels/: cauchy.rs  exp_quad.rs  exponential.rs  gaussian.rs  macros.rs  mod.rs  quadratic.rs  rational_quadratic.rs  stationary.rs  wave.rs
src/misc/: null.rs
src/ops/: intersection.rs  mod.rs  union.rs
src/product/: double.rs  linear.rs  mod.rs  named.rs  pair.rs  regular.rs
src/spaces/: empty.rs  mod.rs  named.rs  pair.rs  regular.rs  unitary.rs
