[package]
name = "spaces"
description = "Set/space primitives for defining machine learning problems."

version = "6.0.0"
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

license = "MIT"
readme = "README.md"

keywords = ["geometry", "vector", "spaces", "machine", "learning"]

repository = "https://github.com/tspooner/spaces"
documentation = "https://docs.rs/spaces"

[badges]
travis-ci = { repository = "tspooner/spaces", branch = "master" }
coveralls = { repository = "tspooner/spaces", branch = "master", service = "github" }

[features]
default = []

serde = ["serde_crate"]

[dependencies]
itertools = "0.10"
num-traits = "0.2"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
serde_test = "1.0"
