[package]
name = "spaces"
description = "Set/space primitives for defining machine learning problems."

version = "6.0.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

readme = "README.md"
license-file = "LICENSE"

keywords = ["geometry", "vector", "spaces", "machine", "learning"]

repository = "https://github.com/tspooner/spaces"
documentation = "https://docs.rs/spaces"

[badges]
travis-ci = { repository = "tspooner/spaces", branch = "master" }
coveralls = { repository = "tspooner/spaces", branch = "master", service = "github" }

[features]
default = []

serde = ["intervals/serde"]

[dependencies]
intervals = "2.1"
itertools = "0.10"
num-traits = "0.2"
